--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,7 +3,10 @@ FROM debian AS mc
 RUN apt-get upgrade -yqq && \
     apt-get update -yqq
 
+RUN apt-get install git wget software-properties-common -yqq
+
 RUN apt-get install default-jre -yqq
+
 
 #RUN apt-get install software-properties-common -yqq
 #RUN add-apt-repository ppa:linuxuprising/java && \
