--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ COMPOSE_PROJECT_NAME=minecraft
 COMPOSE_FILE=docker/docker-compose.yml
 COMPOSE_PATH_SEPARATOR=;
 
+RCON_PORT=25557
+GAME_PORT=25555
+DYNMAP_PORT=25556
 
 SERVERDIR=/tmp/mc
 RUN_SERVER=false
