--- a/server.properties
+++ b/server.properties
@@ -1,53 +1,61 @@
 #Minecraft server properties
-#Sun Feb 14 11:46:44 UTC 2021
-spawn-protection=16
-max-tick-time=60000
-query.port=25565
-generator-settings=
-sync-chunk-writes=true
-force-gamemode=false
-allow-nether=true
-enforce-whitelist=false
-gamemode=survival
-broadcast-console-to-ops=true
-enable-query=false
-player-idle-timeout=0
-text-filtering-config=
-difficulty=easy
-spawn-monsters=true
-broadcast-rcon-to-ops=true
-op-permission-level=4
-pvp=true
-entity-broadcast-range-percentage=100
-snooper-enabled=true
-level-type=default
-hardcore=false
-enable-status=true
-enable-command-block=false
-max-players=20
-network-compression-threshold=256
-resource-pack-sha1=
-max-world-size=29999984
-function-permission-level=2
-rcon.port=25575
-server-port=25565
-debug=false
-server-ip=
-spawn-npcs=true
+#Mon Mar 27 18:14:15 UTC 2023
 allow-flight=false
-level-name=world
-view-distance=10
-resource-pack=
-spawn-animals=true
-white-list=false
-rcon.password=
-generate-structures=true
-max-build-height=256
-online-mode=true
-level-seed=
-use-native-transport=true
-prevent-proxy-connections=false
+allow-nether=true
+broadcast-console-to-ops=true
+broadcast-rcon-to-ops=true
+debug=false
+difficulty=easy
+enable-command-block=false
 enable-jmx-monitoring=false
-enable-rcon=false
+enable-query=false
+enable-rcon=true
+enable-status=true
+enforce-secure-profile=true
+enforce-whitelist=false
+entity-broadcast-range-percentage=100
+force-gamemode=false
+function-permission-level=2
+gamemode=survival
+generate-structures=true
+generator-settings={}
+hardcore=false
+hide-online-players=false
+initial-disabled-packs=
+initial-enabled-packs=vanilla
+level-name=/app/worlds/world
+level-seed=
+level-type=default
+max-build-height=256
+max-chained-neighbor-updates=1000000
+max-players=16
+max-tick-time=60000
+max-world-size=29999984
+motd="Xmat's Minecraft"
+network-compression-threshold=256
+online-mode=true
+op-permission-level=4
+player-idle-timeout=0
+prevent-proxy-connections=false
+pvp=true
+query.port=25565
 rate-limit=0
-motd=A Minecraft Server
+rcon.password=LovelyMc22
+rcon.port=25575
+require-resource-pack=false
+resource-pack=
+resource-pack-prompt=
+resource-pack-sha1=
+server-ip=
+server-port=25565
+simulation-distance=10
+snooper-enabled=true
+spawn-animals=true
+spawn-monsters=true
+spawn-npcs=true
+spawn-protection=32
+sync-chunk-writes=true
+text-filtering-config=
+use-native-transport=true
+view-distance=20
+white-list=false
