--- a/server.properties
+++ b/server.properties
@@ -1,9 +1,11 @@
 #Minecraft server properties
-#Mon Mar 27 18:14:15 UTC 2023
+#Sat Dec 21 19:17:10 UTC 2024
+accepts-transfers=false
 allow-flight=false
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
+bug-report-link=
 debug=false
 difficulty=easy
 enable-command-block=false
@@ -26,6 +28,7 @@ initial-enabled-packs=vanilla
 level-name=/app/worlds/world
 level-seed=
 level-type=default
+log-ips=true
 max-build-height=256
 max-chained-neighbor-updates=1000000
 max-players=16
@@ -35,6 +38,7 @@ motd="Xmat's Minecraft"
 network-compression-threshold=256
 online-mode=true
 op-permission-level=4
+pause-when-empty-seconds=60
 player-idle-timeout=0
 prevent-proxy-connections=false
 pvp=true
@@ -42,8 +46,10 @@ query.port=25565
 rate-limit=0
 rcon.password=LovelyMc22
 rcon.port=25575
+region-file-compression=deflate
 require-resource-pack=false
 resource-pack=
+resource-pack-id=
 resource-pack-prompt=
 resource-pack-sha1=
 server-ip=
@@ -56,6 +62,7 @@ spawn-npcs=true
 spawn-protection=32
 sync-chunk-writes=true
 text-filtering-config=
+text-filtering-version=0
 use-native-transport=true
 view-distance=20
 white-list=false
