--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -12,7 +12,7 @@ services:
     #  - ../:/app
       - ../plugins:/app/plugins
       - ../server.properties:/app/server.properties
-      - $SERVERDIR:/app/worlds
+      - $SERVERDIR/worlds:/app/worlds
     ports:
       - $GAME_PORT:25565
       - $RCON_PORT:25575
